k8s/istiofeatures/canary/c-v2-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-c
    version: v2
  name: service-c-v2
  namespace: servicemesh-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
      version: v2
  template:
    metadata:
      labels:
        app: service-c
        version: v2
    spec:
      serviceAccountName: service-c
      containers:
      - name: service-c
        image: quay.io/nlembers/servicemesh3/service-c:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop: ["ALL"]
          seccompProfile:
            type: RuntimeDefault 
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
