k8s/istiofeatures/canary/3-httproute-50-50.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: service-c-canary
  namespace: servicemesh-apps
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: service-c
    port: 8080
  rules:
  - backendRefs:
    - name: service-c-v1
      port: 8080
      weight: 50
    - name: service-c-v2
      port: 8080
      weight: 50
